# pvr.mediaportal.tvserver

./: CMakeLists.txt
debian/: changelog.in  control  copyright  rules
pvr.mediaportal.tvserver/: addon.xml
src/: GUIDialogRecordSettings.cpp  GenreTable.cpp  Socket.cpp  channels.h  client.cpp  client.h  epg.h  os-dependent.h  pvrclient-mediaportal.cpp  pvrclient-mediaportal.h  recordings.h  timers.cpp  timers.h  utils.cpp  utils.h
src/lib/tsreader/: CMakeLists.txt  DeMultiplexer.h  FileReader.cpp  FileReader.h  MultiFileReader.cpp  TSReader.cpp  TSReader.h
